// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Recovery Phrase Component should match snapshot 1`] = `
<div>
  <div
    class="mm-box recovery-phrase mm-box--display-flex mm-box--gap-6 mm-box--flex-direction-column mm-box--justify-content-space-between mm-box--height-full"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <button
          aria-label="Back"
          class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="review-srp-back-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-left.svg');"
          />
        </button>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Step 2 of 3
        </p>
        <h2
          class="mm-box mm-text mm-text--heading-lg mm-box--color-text-default"
        >
          Save your Secret Recovery Phrase
        </h2>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-6"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-6 mm-box--color-text-alternative"
        >
          <span>
             
            This is your 
            <button
              class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            >
              Secret Recovery Phrase
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. 
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-alternative"
            >
              Don’t share it with anyone, ever.
            </p>
            
             
          </span>
        </p>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box recovery-phrase__secret mm-box--padding-4 mm-box--display-grid mm-box--width-full mm-box--background-color-background-muted mm-box--rounded-lg"
        >
          <div
            class="mm-box recovery-phrase__chips recovery-phrase__chips--hidden mm-box--display-grid mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                1
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-0"
                focused="false"
                readonly=""
                type="text"
                value="debris"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                2
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-1"
                focused="false"
                readonly=""
                type="text"
                value="dizzy"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                3
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-2"
                focused="false"
                readonly=""
                type="text"
                value="just"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                4
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-3"
                focused="false"
                readonly=""
                type="text"
                value="program"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                5
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-4"
                focused="false"
                readonly=""
                type="text"
                value="just"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                6
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-5"
                focused="false"
                readonly=""
                type="text"
                value="float"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                7
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-6"
                focused="false"
                readonly=""
                type="text"
                value="decrease"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                8
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-7"
                focused="false"
                readonly=""
                type="text"
                value="vacant"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                9
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-8"
                focused="false"
                readonly=""
                type="text"
                value="alarm"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                10
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-9"
                focused="false"
                readonly=""
                type="text"
                value="reduce"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                11
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-10"
                focused="false"
                readonly=""
                type="text"
                value="speak"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                12
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-11"
                focused="false"
                readonly=""
                type="text"
                value="stadium"
              />
            </div>
          </div>
          <div
            class="mm-box recovery-phrase__secret-blocker-container mm-box--width-full mm-box--height-full"
          >
            <div
              class="mm-box recovery-phrase__secret-blocker mm-box--padding-top-2 mm-box--padding-bottom-9 mm-box--padding-inline-0 mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full mm-box--background-color-background-muted mm-box--rounded-sm"
            />
            <div
              class="mm-box recovery-phrase__secret-blocker-text mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--height-full"
              data-testid="recovery-phrase-reveal"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-icon-default"
                style="mask-image: url('./images/icons/eye-slash.svg');"
              />
              <p
                class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-default"
              >
                Tap to reveal
              </p>
              <p
                class="mm-box mm-text mm-text--body-sm mm-box--color-text-default"
              >
                Make sure no one is watching your screen.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--width-full"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--disabled recovery-phrase__footer--button mm-button-primary mm-button-primary--disabled mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-xl"
        data-testid="recovery-phrase-continue"
        data-theme="light"
        disabled=""
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;

exports[`Review Recovery Phrase Component should match snapshot after reveal recovery button is clicked 1`] = `
<div>
  <div
    class="mm-box recovery-phrase mm-box--display-flex mm-box--gap-6 mm-box--flex-direction-column mm-box--justify-content-space-between mm-box--height-full"
    data-testid="recovery-phrase"
  >
    <div
      class="mm-box"
    >
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <button
          aria-label="Back"
          class="mm-box mm-button-icon mm-button-icon--size-md mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
          data-testid="review-srp-back-button"
        >
          <span
            class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-left.svg');"
          />
        </button>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-4 mm-box--justify-content-flex-start mm-box--width-full"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Step 2 of 3
        </p>
        <h2
          class="mm-box mm-text mm-text--heading-lg mm-box--color-text-default"
        >
          Save your Secret Recovery Phrase
        </h2>
      </div>
      <div
        class="mm-box mm-box--margin-bottom-6"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--margin-bottom-6 mm-box--color-text-alternative"
        >
          <span>
             
            This is your 
            <button
              class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-inherit mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
            >
              Secret Recovery Phrase
            </button>
            . Write it down in the correct order and keep it safe. If someone has your Secret Recovery Phrase, they can access your wallet. 
            <p
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-medium mm-box--color-text-alternative"
            >
              Don’t share it with anyone, ever.
            </p>
            
             
          </span>
        </p>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-column"
      >
        <div
          class="mm-box recovery-phrase__secret mm-box--padding-4 mm-box--display-grid mm-box--width-full mm-box--background-color-background-muted mm-box--rounded-lg"
        >
          <div
            class="mm-box recovery-phrase__chips mm-box--display-grid mm-box--gap-2 mm-box--justify-content-center mm-box--align-items-center"
            data-quiz-words="[]"
            data-recovery-phrase="debris:dizzy:just:program:just:float:decrease:vacant:alarm:reduce:speak:stadium"
            data-testid="recovery-phrase-chips"
          >
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                1
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-0"
                focused="false"
                readonly=""
                type="text"
                value="debris"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                2
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-1"
                focused="false"
                readonly=""
                type="text"
                value="dizzy"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                3
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-2"
                focused="false"
                readonly=""
                type="text"
                value="just"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                4
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-3"
                focused="false"
                readonly=""
                type="text"
                value="program"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                5
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-4"
                focused="false"
                readonly=""
                type="text"
                value="just"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                6
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-5"
                focused="false"
                readonly=""
                type="text"
                value="float"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                7
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-6"
                focused="false"
                readonly=""
                type="text"
                value="decrease"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                8
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-7"
                focused="false"
                readonly=""
                type="text"
                value="vacant"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                9
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-8"
                focused="false"
                readonly=""
                type="text"
                value="alarm"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                10
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-9"
                focused="false"
                readonly=""
                type="text"
                value="reduce"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                11
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-10"
                focused="false"
                readonly=""
                type="text"
                value="speak"
              />
            </div>
            <div
              class="mm-box mm-text-field mm-text-field--size-md mm-text-field--truncate mm-box--padding-right-0 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--align-items-center mm-box--background-color-background-default mm-box--rounded-lg mm-box--border-width-1 box--border-style-solid"
            >
              <p
                class="mm-box mm-text recovery-phrase__word-index mm-text--body-md mm-box--color-text-alternative"
              >
                12
                .
              </p>
              <input
                autocomplete="off"
                class="mm-box mm-text mm-input mm-input--disable-state-styles mm-text-field__input mm-text--body-md mm-box--margin-0 mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-2 mm-box--color-text-default mm-box--background-color-transparent mm-box--border-style-none"
                data-testid="recovery-phrase-chip-11"
                focused="false"
                readonly=""
                type="text"
                value="stadium"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="mm-box mm-box--width-full"
    >
      <button
        class="mm-box mm-text mm-button-base mm-button-base--size-lg recovery-phrase__footer--button mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--width-full mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-xl"
        data-testid="recovery-phrase-continue"
        data-theme="light"
      >
        Continue
      </button>
    </div>
  </div>
</div>
`;
